# Defesa-Mestrado-UFRN

./: CMakeLists.txt  ECDSA_ECDH_C25519  ECDSA_ECDH_C25519.CPP  ECDSA_ECDH_C25519_32bits  EEC_arm_linux  EEC_arm_linux_dinamic  README.md  bits numb sized.txt  linker_script.ld  script.resc  script_renode.resc  syscalls.c  test.c  test_arm
Defesa_Mestrado_mini/: MINI_ECDSA_ECDH_C25519.cpp  cube_random_gmp  cube_random_gmp.cpp  cube_random_gmp_teste  simple_mini_gmp  simple_mini_gmp.cpp  syscalls.c
bcp/: ECDSA_ECDH_C25519.elf  ECDSA_ECDH_C25519_qemu
